拿掉身高差鞋子那句

--- a/pages/base_setting.html
+++ b/pages/base_setting.html
@@ -212,7 +212,7 @@
           </div>
           <h5>【其他】</h5>
           <div class="text fill">
-            身高差參考 - 會因為鞋子不同的關係而改變明顯程度<br>
+            身高差參考<br>
             <img src="/baiyeh/imgs/height.png"/>
           </div>
         </list>
