更新：基本設定頁 - 調整看法分段

--- a/pages/base_setting.html
+++ b/pages/base_setting.html
@@ -239,19 +239,19 @@
               <li class="b">灰色表示白恩對阿耶</li>
               <li class="y">藍色表示阿耶對白恩</li>
             </div>
-            <h6>事件開頭初識</h6>
+            <h6>本篇主事件</h6>
             <ul>
               <li class="b">覺得阿耶是奇怪的人。</li>
               <li class="b">幫助同樣遇難的對方，總是在對方前面阻擋危險。</li>
               <li class="y">將白恩誤認為男性，不怎麼講話有點不好相處。</li>
               <li class="y">從質疑及不信任逐漸轉為執意。</li>
-            </ul>
-            <h6>事件中後期</h6>
-            <ul>
               <li class="y">中途分散時將對方視為要找到的重要對象。</li>
               <li class="b">分散之後發現自己還想再見到對方。</li>
-              <li class="y">被阿耶救了一命，對對方很感謝但還是帶著愧疚。</li>
-              <li class="b">得知對方是女性，覺得很尷尬也不好意思。</li>
+            </ul>
+            <h6>事件結束後</h6>
+            <ul>
+              <li class="b">被阿耶救了一命，對對方很感謝但還是帶著愧疚。</li>
+              <li class="y">得知對方是女性，覺得很尷尬也不好意思。</li>
               <li class="y">嘗試主動聯繫和相約見面，確認了自己對阿耶的心意。</li>
             </ul>
             <h6>白恩回日本</h6>
