修改：基本設定 - 看法有一句顏色錯了

--- a/pages/base_setting.html
+++ b/pages/base_setting.html
@@ -252,7 +252,7 @@
             <ul>
               <li class="b">被阿耶救了一命，對對方很感謝但還是帶著愧疚。</li>
               <li class="y">得知對方是女性，覺得很尷尬也不好意思。</li>
-              <li class="y">嘗試主動聯繫和相約見面，確認了自己對阿耶的心意。</li>
+              <li class="b">嘗試主動聯繫和相約見面，確認了自己對阿耶的心意。</li>
             </ul>
             <h6>白恩回日本</h6>
             <ul>
